--- a/style.css
+++ b/style.css
@@ -1,18 +1,30 @@
+
 *{
     font-family: "Rimouski";
 }
 
+html {
+    box-sizing: border-box;
+  }
+  
+
 body{
     background-color: #293251;
+    font-weight: 500;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    min-height: 100vh;
 }
 
+
 .container{
+    width: auto;
     width: 300px;    
     background-color: #FFF;
-    
-    display: block;
     margin: 0 auto;
-    
     border-radius: 10px;
     padding-bottom : 50px;
 }
@@ -107,5 +119,26 @@ body{
     font-size: 0.8em;
 }
 
+/* Loader */
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #333; /* dark grey */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
 
+  
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+/* media query: tablet or smaller */
+@media screen and (max-width:1000px) {
+    .container {
+      margin: auto 10px;
+    }
 
+  }
